CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- Reverted Mac Carbon Clipping simplification that broke
	  subwindow clipping (STR #908, SVN r4386)
	- Fixed bitmap scaling code
	- Fixed tiny memory leak (STR #878)
	- Fixed hang on corrupt jpeg (STR #915)
	- Fixed static allocation of font buffer in demo (STR #909)
	- Added symbols 'refresh', 'reload', 'undo', and 'redo'.
	- Fixed focus loss on Fl_Window:resize()
	- Fl::delete_widget would hang fl_wait after deleting the
	  window (STR #679)
	- Fl::paste would sometimes not recoginze external 
	  changes of the clipboard (STR #722)
	- Clipping fixes for OSX
	- Removed attempt to find items via 
	  Fl_Menu_::find_item() in linked submenus
	- Fluid interactive window resizing fixes (STR #873, 791)
	- Fluid panel resize and alignment fixes (STR #891)
	- Fl_Window::show(argc, argv) now sets the scheme before
	  showing the window; this should eliminate any
	  flickering between the standard and plastic schemes on
	  startup (STR #886)
	- Selected tabs are now drawn slightly larger than
	  unselected tabs so they stand out more (STR #882)
	- Round Plastic boxes now draw round (STR #841)
	- FL_PLASTIC_DOWN_BOX drew with artifacts (STR #852)
	- Changed initializations on WIN32 (STR #862)
	- Fl_Preferences::getUserdataPath() didn't work for
	  sub-groups (STR #872)
	- Fixed some redraw issues on Windows XP.
	- FLUID didn't set the initial size of widgets properly
	  (STR #850)
	- Fl_Tabs would steal focus away from its children on a
	  window focus change (STR #870)
	- filename_relative() now converts the current directory
	  to forward slashes as needed on WIN32 (STR #816)
	- Fl_File_Chooser::value() and ::directory() now handle
	  paths with backslashes on WIN32 (STR #811)
	- Added the standard rgb.txt file from X11 to the test
	  directory, allowing all platforms to try the colbrowser
	  demo (STR #843)
	- Resizing of OpenGL subwindows was broken on OSX (STR #804)