@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Increased matrix stack depth and added over/underfolw error
+	  (STR #924)
 	- Reverted Mac Carbon Clipping simplification that broke
 	  subwindow clipping (STR #908, SVN r4386)
 	- Fixed bitmap scaling code
